[package]
name = "orion"
version = "0.1.0"
edition = "2021"
authors = ["Space_Nerd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winsock2", "winuser"] }
clap = { version = "4.4.11", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"